--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@genesysit/react-json-form",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "This package creates a form from a JSON template.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest --config jestconfig.json",
-    "build":"tsc && node-sass --recursive --output dist --source-map true --source-map-contents src",
-    "build:webpack": "webpack --config webpack.prod.js",
+    "build:old": "tsc && node-sass --recursive --output dist --source-map true --source-map-contents src && cp -r ./src/schemas ./dist/",
+    "build": "webpack --config webpack.prod.js",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "prepare": "npm run build",
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/androidpage/json-form-builder#readme",
   "dependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "ajv": "^6.7.0",
     "office-ui-fabric-react": "^5.134.0",
     "react": "^16.7.0",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/preset-react": "^7.0.0",
     "@storybook/addon-actions": "^4.1.11",
     "@storybook/addon-links": "^4.1.11",
     "@storybook/addons": "^4.1.11",
@@ -60,6 +62,8 @@
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^1.0.1",
+    "gulp": "^4.0.0",
+    "gulp-replace": "^1.0.0",
     "http-server": "^0.11.1",
     "jest": "^23.6.0",
     "node-sass": "^4.11.0",
@@ -74,6 +78,7 @@
     "typescript": "^3.3.1",
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.29.0",
+    "webpack-bundle-analyzer": "^3.0.4",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
   },
