updated various dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@genesysit/react-json-form",
-  "version": "0.0.5",
+  "version": "0.0.8",
   "description": "This package creates a form from a JSON template.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,6 @@
     "build": "webpack --config webpack.prod.js",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
-    "prepare": "npm run build",
     "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
@@ -36,51 +35,53 @@
   },
   "homepage": "https://github.com/androidpage/json-form-builder#readme",
   "dependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
-    "ajv": "^6.7.0",
-    "office-ui-fabric-react": "^5.134.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
+    "ajv": "^6.10.2",
+    "css-modules-typescript-loader": "^2.0.4",
+    "office-ui-fabric-react": "^6.195.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-dropzone": "^8.0.3"
+    "react-dropzone": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@storybook/addon-actions": "^4.1.11",
     "@storybook/addon-links": "^4.1.11",
     "@storybook/addons": "^4.1.11",
     "@storybook/react": "^4.1.11",
     "@types/jest": "^23.3.12",
-    "@types/node": "^10.12.21",
-    "@types/react": "^16.7.20",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-dropzone": "^4.2.2",
+    "@types/node": "^10.14.13",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.5",
+    "@types/react-dropzone": "^5.1.0",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^1.0.1",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^1.0.1",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "gulp-replace": "^1.0.0",
     "http-server": "^0.11.1",
     "jest": "^23.6.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "prettier": "^1.15.3",
     "sass-loader": "^7.1.0",
     "source-map": "^0.7.3",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-jest": "^23.10.5",
-    "tslint": "^5.12.1",
+    "ts-loader": "^6.0.4",
+    "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.17.0",
-    "typescript": "^3.3.1",
+    "typescript": "^3.5.3",
     "typings-for-css-modules-loader": "^1.7.0",
-    "webpack": "^4.29.0",
-    "webpack-bundle-analyzer": "^3.0.4",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack": "^4.37.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
   },
   "resolutions": {
     "terser": "3.14.1"
